--- a/src/View/Dashboard.form
+++ b/src/View/Dashboard.form
@@ -175,8 +175,11 @@
               <SubComponents>
                 <Component class="javax.swing.JTable" name="categoryTable">
                   <Properties>
+                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                      <Font name="Helvetica Neue" size="18" style="0"/>
+                    </Property>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="3" rowCount="1">
+                      <Table columnCount="3" rowCount="0">
                         <Column editable="false" title="No" type="java.lang.Object"/>
                         <Column editable="false" title="Category Title" type="java.lang.Object"/>
                         <Column editable="false" title="Action" type="java.lang.Object"/>
@@ -184,7 +187,7 @@
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                       <TableColumnModel selectionModel="0">
-                        <Column maxWidth="100" minWidth="100" prefWidth="-1" resizable="true">
+                        <Column maxWidth="200" minWidth="200" prefWidth="200" resizable="true">
                           <Title/>
                           <Editor/>
                           <Renderer/>
@@ -194,15 +197,16 @@
                           <Editor/>
                           <Renderer/>
                         </Column>
-                        <Column maxWidth="300" minWidth="300" prefWidth="300" resizable="true">
+                        <Column maxWidth="200" minWidth="200" prefWidth="200" resizable="true">
                           <Title/>
                           <Editor/>
                           <Renderer/>
                         </Column>
                       </TableColumnModel>
                     </Property>
+                    <Property name="rowHeight" type="int" value="50"/>
                     <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
-                      <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
+                      <TableHeader reorderingAllowed="true" resizingAllowed="false"/>
                     </Property>
                   </Properties>
                 </Component>
