--- a/src/View/Dashboard.form
+++ b/src/View/Dashboard.form
@@ -179,10 +179,9 @@
                       <Font name="Helvetica Neue" size="18" style="0"/>
                     </Property>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="3" rowCount="0">
+                      <Table columnCount="2" rowCount="0">
                         <Column editable="false" title="No" type="java.lang.Object"/>
                         <Column editable="false" title="Category Title" type="java.lang.Object"/>
-                        <Column editable="false" title="Action" type="java.lang.Object"/>
                       </Table>
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -197,11 +196,6 @@
                           <Editor/>
                           <Renderer/>
                         </Column>
-                        <Column maxWidth="200" minWidth="200" prefWidth="200" resizable="true">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
                       </TableColumnModel>
                     </Property>
                     <Property name="rowHeight" type="int" value="50"/>
@@ -209,6 +203,9 @@
                       <TableHeader reorderingAllowed="true" resizingAllowed="false"/>
                     </Property>
                   </Properties>
+                  <Events>
+                    <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="categoryTableMouseClicked"/>
+                  </Events>
                 </Component>
               </SubComponents>
             </Container>
@@ -300,7 +297,7 @@
             </Property>
             <Property name="horizontalAlignment" type="int" value="2"/>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/SwingGUI/images/search.png"/>
+              <Image iconType="3" name="/images/search.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Category"/>
             <Property name="horizontalTextPosition" type="int" value="4"/>
@@ -324,7 +321,7 @@
             </Property>
             <Property name="horizontalAlignment" type="int" value="2"/>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/SwingGUI/images/news.png"/>
+              <Image iconType="3" name="/images/news.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="News"/>
             <Property name="horizontalTextPosition" type="int" value="4"/>
@@ -348,7 +345,7 @@
             </Property>
             <Property name="horizontalAlignment" type="int" value="2"/>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/SwingGUI/images/logout.png"/>
+              <Image iconType="3" name="/images/logout.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Logout"/>
             <Property name="horizontalTextPosition" type="int" value="4"/>
@@ -369,7 +366,7 @@
             </Property>
             <Property name="horizontalAlignment" type="int" value="2"/>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/SwingGUI/images/user.png"/>
+              <Image iconType="3" name="/images/user.png"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Profile"/>
             <Property name="horizontalTextPosition" type="int" value="4"/>
